# idsov

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
dnas/idsov/workdir/: dna.yaml
dnas/idsov/zomes/coordinator/patient_records/: Cargo.toml
dnas/idsov/zomes/coordinator/patient_records/src/: all_records.rs  comment.rs  lib.rs  patient_record.rs
dnas/idsov/zomes/integrity/patient_records/: Cargo.toml
dnas/idsov/zomes/integrity/patient_records/src/: comment.rs  lib.rs  patient_record.rs
tests/src/idsov/patient_records/: all-records.test.ts  comment.test.ts  common.ts  patient-record.test.ts
tests/src/idsov/profiles/: common.ts
ui/: index.html  package.json  svelte.config.js  tailwind.config.js
ui/src/: App.svelte  SvgIcon.svelte  Welcome.svelte  app.css  can.css  contexts.ts  main.ts  profilesStore.js  store.js
ui/src/idsov/: .#Header.svelte  Avatar.svelte  Dashboard.svelte  Footer.svelte  Header.svelte  Order.svelte  Register.svelte  Timeline.svelte
ui/src/idsov/patient_records/: AllRecords.svelte  CommentDetail.svelte  CommentsForPatientRecord.svelte  CreateComment.svelte  CreatePatientRecord.svelte  DashboardPatientRecordListItem.svelte  EditComment.svelte  EditPatientRecord.svelte  PatientRecordDetail.svelte  PatientRecordListItem.svelte  RecordsByUser.svelte  types.ts
ui/src/idsov/patient_records/data/: maungaList.ts  moanaList.ts  noHeaKoeList.ts
workdir/: happ.yaml  web-happ.yaml
