[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.3.6"
hdk = "=0.2.6"
serde = "=1.0.166"

[workspace.dependencies.patient_records]
path = "dnas/idsov/zomes/coordinator/patient_records"

[workspace.dependencies.patient_records_integrity]
path = "dnas/idsov/zomes/integrity/patient_records"
